# final_project

./: README.md  package.xml
launch/: pacturtle_world.launch  visualize_particles.launch
map/: final_project.world
map/Pacturtle/: model.config  model.sdf
map/Pacturtle_v2/: map.txt  model.config  model.sdf
scripts/: blue_turtle.py  ghostturtle.py  green_turtle.py  likelihood_field.py  pacturtle_teleop_key.py  particle_filter.py  red_turtle.py  world_controller.py  yellow_turtle.py
urdf/: turtlebot3_waffle_pi_final_project.gazebo.xacro  turtlebot3_waffle_pi_final_project.urdf.xacro
