<package format="2">
  <name>final_project</name>
  <version>0.0.1</version>
  <description>
  The final_project package
  </description>
  <maintainer email="yvesshum@uchicago.edu">Yves Shum</maintainer>
  <maintainer email="jjrsoong@uchicago.edu">Joshua Soong</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
</package>
